--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -7,41 +7,39 @@
     <title>Real Time Products</title>
     <script src="/socket.io/socket.io.js"></script>
     <script>
-        document.addEventListener("DOMContentLoaded", () => {
-            const socket = io();
+        const socket = io();
 
-            socket.on('productList', (products) => {
-                const productList = document.getElementById('productList');
-                productList.innerHTML = '';
-                products.forEach(product => {
-                    const li = document.createElement('li');
-                    li.textContent = `${product.title} - ${product.price}`;
-                    productList.appendChild(li);
-                });
-            });
-
-            const form = document.getElementById('productForm');
-            form.addEventListener('submit', (event) => {
-                event.preventDefault();
-                const title = event.target.title.value;
-                const price = event.target.price.value;
-                socket.emit('newProduct', { title, price });
+        socket.on('productListUpdated', (products) => {
+            const productsList = document.getElementById('products-list');
+            productsList.innerHTML = '';
+            products.forEach(product => {
+                const li = document.createElement('li');
+                li.textContent = `${product.title} - ${product.price}`;
+                productsList.appendChild(li);
             });
         });
+
+        const addProduct = () => {
+            const title = document.getElementById('title').value;
+            const price = document.getElementById('price').value;
+            socket.emit('addProduct', { title, price });
+        };
     </script>
 </head>
 
 <body>
-    <h1>Lista de Productos en Tiempo Real</h1>
-    <ul id="productList">
+    <h1>Productos en tiempo real</h1>
+    <ul id="products-list">
         {{#each products}}
         <li>{{this.title}} - {{this.price}}</li>
         {{/each}}
     </ul>
-    <form id="productForm">
-        <input type="text" name="title" placeholder="Title" required>
-        <input type="number" name="price" placeholder="Price" required>
-        <button type="submit">Agregar Producto</button>
+
+    <h2>Agregar Producto</h2>
+    <form onsubmit="addProduct(); return false;">
+        <input type="text" id="title" placeholder="Título" required>
+        <input type="number" id="price" placeholder="Precio" required>
+        <button type="submit">Agregar</button>
     </form>
 </body>
 
